// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    [
      {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啒
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啊
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
{
  "account-book": 21834,
  "aim": 21835,
  "alert": 21836,
  "alibaba": 21837,
  "align-center": 21838,
  "align-left": 21839,
  "align-right": 21840,
  "alipay": 21842,
  "alipay-circle": 21841,
  "aliwangwang": 21843,
  "aliyun": 21844,
  "amazon": 21845,
  "android": 21846,
  "ant-cloud": 21847,
  "ant-design": 21848,
  "apartment": 21849,
  "api": 21850,
  "apple": 21851,
  "appstore": 21853,
  "appstore-add": 21852,
  "area-chart": 21854,
  "arrow-down": 21855,
  "arrow-left": 21856,
  "arrow-right": 21857,
  "arrow-up": 21858,
  "arrows-alt": 21859,
  "audio": 21861,
  "audio-muted": 21860,
  "audit": 21862,
  "backward": 21863,
  "baidu": 21864,
  "bank": 21865,
  "bar-chart": 21866,
  "barcode": 21867,
  "bars": 21868,
  "behance": 21870,
  "behance-square": 21869,
  "bell": 21871,
  "bg-colors": 21872,
  "bilibili": 21873,
  "block": 21874,
  "bold": 21875,
  "book": 21876,
  "border": 21885,
  "border-bottom": 21877,
  "border-horizontal": 21878,
  "border-inner": 21879,
  "border-left": 21880,
  "border-outer": 21881,
  "border-right": 21882,
  "border-top": 21883,
  "border-verticle": 21884,
  "borderless-table": 21886,
  "box-plot": 21887,
  "branches": 21888,
  "bug": 21889,
  "build": 21890,
  "bulb": 21891,
  "calculator": 21892,
  "calendar": 21893,
  "camera": 21894,
  "car": 21895,
  "caret-down": 21896,
  "caret-left": 21897,
  "caret-right": 21898,
  "caret-up": 21899,
  "carry-out": 21900,
  "check": 21903,
  "check-circle": 21901,
  "check-square": 21902,
  "chrome": 21904,
  "ci": 21906,
  "ci-circle": 21905,
  "clear": 21907,
  "clock-circle": 21908,
  "close": 21911,
  "close-circle": 21909,
  "close-square": 21910,
  "cloud": 21916,
  "cloud-download": 21912,
  "cloud-server": 21913,
  "cloud-sync": 21914,
  "cloud-upload": 21915,
  "cluster": 21917,
  "code": 21919,
  "code-sandbox": 21918,
  "codepen": 21921,
  "codepen-circle": 21920,
  "coffee": 21922,
  "column-height": 21923,
  "column-width": 21924,
  "comment": 21925,
  "compass": 21926,
  "compress": 21927,
  "console-sql": 21928,
  "contacts": 21929,
  "container": 21930,
  "control": 21931,
  "copy": 21932,
  "copyright": 21934,
  "copyright-circle": 21933,
  "credit-card": 21935,
  "crown": 21936,
  "customer-service": 21937,
  "dash": 21938,
  "dashboard": 21939,
  "database": 21940,
  "delete": 21943,
  "delete-column": 21941,
  "delete-row": 21942,
  "delivered-procedure": 21944,
  "deployment-unit": 21945,
  "desktop": 21946,
  "diff": 21947,
  "dingding": 21948,
  "dingtalk": 21949,
  "disconnect": 21950,
  "discord": 21951,
  "dislike": 21952,
  "docker": 21953,
  "dollar": 21955,
  "dollar-circle": 21954,
  "dot-chart": 21956,
  "dot-net": 21957,
  "double-left": 21958,
  "double-right": 21959,
  "down": 21962,
  "down-circle": 21960,
  "down-square": 21961,
  "download": 21963,
  "drag": 21964,
  "dribbble": 21966,
  "dribbble-square": 21965,
  "dropbox": 21967,
  "edit": 21968,
  "ellipsis": 21969,
  "enter": 21970,
  "environment": 21971,
  "euro": 21973,
  "euro-circle": 21972,
  "exception": 21974,
  "exclamation": 21976,
  "exclamation-circle": 21975,
  "expand": 21978,
  "expand-alt": 21977,
  "experiment": 21979,
  "export": 21980,
  "eye": 21982,
  "eye-invisible": 21981,
  "facebook": 21983,
  "fall": 21984,
  "fast-backward": 21985,
  "fast-forward": 21986,
  "field-binary": 21987,
  "field-number": 21988,
  "field-string": 21989,
  "field-time": 21990,
  "file": 22008,
  "file-add": 21991,
  "file-done": 21992,
  "file-excel": 21993,
  "file-exclamation": 21994,
  "file-gif": 21995,
  "file-image": 21996,
  "file-jpg": 21997,
  "file-markdown": 21998,
  "file-pdf": 21999,
  "file-ppt": 22000,
  "file-protect": 22001,
  "file-search": 22002,
  "file-sync": 22003,
  "file-text": 22004,
  "file-unknown": 22005,
  "file-word": 22006,
  "file-zip": 22007,
  "filter": 22009,
  "fire": 22010,
  "flag": 22011,
  "folder": 22015,
  "folder-add": 22012,
  "folder-open": 22013,
  "folder-view": 22014,
  "font-colors": 22016,
  "font-size": 22017,
  "fork": 22018,
  "form": 22019,
  "format-painter": 22020,
  "forward": 22021,
  "frown": 22022,
  "fullscreen": 22024,
  "fullscreen-exit": 22023,
  "function": 22025,
  "fund": 22028,
  "fund-projection-screen": 22026,
  "fund-view": 22027,
  "funnel-plot": 22029,
  "gateway": 22030,
  "gif": 22031,
  "gift": 22032,
  "github": 22033,
  "gitlab": 22034,
  "global": 22035,
  "gold": 22036,
  "google": 22038,
  "google-plus": 22037,
  "group": 22039,
  "hand-shake": 22040,
  "harmony-o-s": 22041,
  "hdd": 22042,
  "heart": 22043,
  "heat-map": 22044,
  "highlight": 22045,
  "history": 22046,
  "holder": 22047,
  "home": 22048,
  "hourglass": 22049,
  "html5": 22050,
  "idcard": 22051,
  "ie": 22052,
  "import": 22053,
  "inbox": 22054,
  "info": 22056,
  "info-circle": 22055,
  "insert-row-above": 22057,
  "insert-row-below": 22058,
  "insert-row-left": 22059,
  "insert-row-right": 22060,
  "instagram": 22061,
  "insurance": 22062,
  "interaction": 22063,
  "issues-close": 22064,
  "italic": 22065,
  "java": 22067,
  "java-script": 22066,
  "key": 22068,
  "kubernetes": 22069,
  "laptop": 22070,
  "layout": 22071,
  "left": 22074,
  "left-circle": 22072,
  "left-square": 22073,
  "like": 22075,
  "line": 22078,
  "line-chart": 22076,
  "line-height": 22077,
  "link": 22079,
  "linkedin": 22080,
  "linux": 22081,
  "loading": 22083,
  "loading-3-quarters": 22082,
  "lock": 22084,
  "login": 22085,
  "logout": 22086,
  "mac-command": 22087,
  "mail": 22088,
  "man": 22089,
  "medicine-box": 22090,
  "medium": 22092,
  "medium-workmark": 22091,
  "meh": 22093,
  "menu": 22096,
  "menu-fold": 22094,
  "menu-unfold": 22095,
  "merge": 22098,
  "merge-cells": 22097,
  "message": 22099,
  "minus": 22102,
  "minus-circle": 22100,
  "minus-square": 22101,
  "mobile": 22103,
  "money-collect": 22104,
  "monitor": 22105,
  "moon": 22106,
  "more": 22107,
  "muted": 22108,
  "node-collapse": 22109,
  "node-expand": 22110,
  "node-index": 22111,
  "notification": 22112,
  "number": 22113,
  "one-to-one": 22114,
  "open-a-i": 22115,
  "ordered-list": 22116,
  "paper-clip": 22117,
  "partition": 22118,
  "pause": 22120,
  "pause-circle": 22119,
  "pay-circle": 22121,
  "percentage": 22122,
  "phone": 22123,
  "pic-center": 22124,
  "pic-left": 22125,
  "pic-right": 22126,
  "picture": 22127,
  "pie-chart": 22128,
  "pinterest": 22129,
  "play-circle": 22130,
  "play-square": 22131,
  "plus": 22134,
  "plus-circle": 22132,
  "plus-square": 22133,
  "pound": 22136,
  "pound-circle": 22135,
  "poweroff": 22137,
  "printer": 22138,
  "product": 22139,
  "profile": 22140,
  "project": 22141,
  "property-safety": 22142,
  "pull-request": 22143,
  "pushpin": 22144,
  "python": 22145,
  "qq": 22146,
  "qrcode": 22147,
  "question": 22149,
  "question-circle": 22148,
  "radar-chart": 22150,
  "radius-bottomleft": 22151,
  "radius-bottomright": 22152,
  "radius-setting": 22153,
  "radius-upleft": 22154,
  "radius-upright": 22155,
  "read": 22156,
  "reconciliation": 22157,
  "red-envelope": 22158,
  "reddit": 22159,
  "redo": 22160,
  "reload": 22161,
  "rest": 22162,
  "retweet": 22163,
  "right": 22166,
  "right-circle": 22164,
  "right-square": 22165,
  "rise": 22167,
  "robot": 22168,
  "rocket": 22169,
  "rollback": 22170,
  "rotate-left": 22171,
  "rotate-right": 22172,
  "ruby": 22173,
  "safety": 22175,
  "safety-certificate": 22174,
  "save": 22176,
  "scan": 22177,
  "schedule": 22178,
  "scissor": 22179,
  "search": 22180,
  "security-scan": 22181,
  "select": 22182,
  "send": 22183,
  "setting": 22184,
  "shake": 22185,
  "share-alt": 22186,
  "shop": 22187,
  "shopping": 22189,
  "shopping-cart": 22188,
  "shrink": 22190,
  "signature": 22191,
  "sisternode": 22192,
  "sketch": 22193,
  "skin": 22194,
  "skype": 22195,
  "slack": 22197,
  "slack-square": 22196,
  "sliders": 22198,
  "small-dash": 22199,
  "smile": 22200,
  "snippets": 22201,
  "solution": 22202,
  "sort-ascending": 22203,
  "sort-descending": 22204,
  "sound": 22205,
  "split-cells": 22206,
  "spotify": 22207,
  "star": 22208,
  "step-backward": 22209,
  "step-forward": 22210,
  "stock": 22211,
  "stop": 22212,
  "strikethrough": 22213,
  "subnode": 22214,
  "sun": 22215,
  "swap": 22218,
  "swap-left": 22216,
  "swap-right": 22217,
  "switcher": 22219,
  "sync": 22220,
  "table": 22221,
  "tablet": 22222,
  "tag": 22223,
  "tags": 22224,
  "taobao": 22226,
  "taobao-circle": 22225,
  "team": 22227,
  "thunderbolt": 22228,
  "tik-tok": 22229,
  "to-top": 22230,
  "tool": 22231,
  "trademark": 22233,
  "trademark-circle": 22232,
  "transaction": 22234,
  "translation": 22235,
  "trophy": 22236,
  "truck": 22237,
  "twitch": 22238,
  "twitter": 22239,
  "underline": 22240,
  "undo": 22241,
  "ungroup": 22242,
  "unlock": 22243,
  "unordered-list": 22244,
  "up": 22247,
  "up-circle": 22245,
  "up-square": 22246,
  "upload": 22248,
  "usb": 22249,
  "user": 22253,
  "user-add": 22250,
  "user-delete": 22251,
  "user-switch": 22252,
  "usergroup-add": 22254,
  "usergroup-delete": 22255,
  "verified": 22256,
  "vertical-align-bottom": 22257,
  "vertical-align-middle": 22258,
  "vertical-align-top": 22259,
  "vertical-left": 22260,
  "vertical-right": 22261,
  "video-camera": 22263,
  "video-camera-add": 22262,
  "wallet": 22264,
  "warning": 22265,
  "wechat": 22267,
  "wechat-work": 22266,
  "weibo": 22270,
  "weibo-circle": 22268,
  "weibo-square": 22269,
  "whats-app": 22271,
  "wifi": 22272,
  "windows": 22273,
  "woman": 22274,
  "x": 22275,
  "yahoo": 22276,
  "youtube": 22277,
  "yuque": 22278,
  "zhihu": 22279,
  "zoom-in": 22280,
  "zoom-out": 22281,
}
`;
